maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:7: error: forward reference extends over definition of variable sommeAngle
    if (!estFaceMur()) {avance(); sommeAngle+=1}
                                  ^